force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMappingRow__c/SVMXA360__CONF_ExpressionBasedMappingRow__c.object-meta.xml
<CustomObject>
    <description>Object to store expression based mapping row info for Transaction Header and Child</description>
    <label>Expression Based Mapping Row</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression Based Mapping Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>