force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMappingRow__c/fields/SVMXA360__ExpressionBasedMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionBasedMapping__c</fullName>
    <description>Master Detail relationship to Expression Based Mapping with target information, on which mapping conditional mapping rows are defined</description>
    <label>Expression Based Mapping</label>
    <referenceTo>SVMXA360__CONF_ExpressionBasedMapping__c</referenceTo>
    <relationshipLabel>Expression Based Mapping Rows</relationshipLabel>
    <relationshipName>Expression_Based_Mapping_Rows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>