force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMappingRow__c/fields/SVMXA360__ExpressionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expression to be evaluated for applying Mapping</description>
    <label>Expression</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Expression Based Mapping Rows</relationshipLabel>
    <relationshipName>Expression_Based_Mapping_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>