force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMappingRow__c/fields/SVMXA360__ObjectMappingId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectMappingId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapping to be applied for the qualified Expression</description>
    <label>Object Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Expression Based Mapping Rows</relationshipLabel>
    <relationshipName>Expression_Based_Mapping_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>