force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMappingRow__c/fields/SVMXA360__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Sequence__c</fullName>
    <description>Sequence in which expression based mapping to be evaluated</description>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>